samples/_failures_safe/1761303677_f55d64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f6cf0da.c: In function ‘main’:
./samples/SAFE/__tmp_9f6cf0da.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
